# statistical-methods-library

./: .flake8  .gitignore  .isort.cfg  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  catalog-info.yaml  docs.sh  mkdocs.yml  pyproject.toml  test_data_for_period0_backdata.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci-checks-pr.yaml  ci-checks.yaml  create-release.yaml  dependabot-auto-merge.yml  package-release-artifact.yml  release-code.yml
docs/: estimation.md  index.md
docs/release-notes/: 10.0.0.md  11.0.0.md  11.0.1.md  12.0.0.md  9.0.0.md  9.0.1.md  9.1.0.md  9.1.1.md
docs/specs/: estimation.md  imputation.md
imputation/: implementation.md  imputation.py
release-notes/: 11.0.2.md  12.0.0.md  13.0.0.md  13.1.0.md  13.1.1.md  13.1.2.md  13.2.0.md  13.3.0.md  13.3.1.md  13.3.2.md  9.1.1.md
statistical_methods_library/: __init__.py  estimation.py  imputation.py  outliering.py  winsorisation.py
statistical_methods_library/estimation/: __init__.py  ht_ratio.py
statistical_methods_library/imputation/: __init__.py  engine.py  implementation.md  imputation.py  mean_of_ratios.py  ratio_calculators.py  ratio_of_means.py
statistical_methods_library/outliering/: __init__.py  winsorisation.py
statistical_methods_library/util/: validation.py
statistical_methods_library/utilities/: __init__.py  exceptions.py  periods.py  validation.py
tests/: README.md  conf.json  conftest.py  estimation.csv  helpers.py  test_estimation.py  test_imputation.py  test_one.py  test_outlering.py  test_outliering.py  test_winsorisation.py
tests/estimation/: test_ht_ratio.py
tests/imputation/: conftest.py  default.toml  mean_of_ratios.toml  ratio_of_means.toml  test_backward_imputation.py  test_basic_functionality.py  test_combined.py  test_construction.py  test_construction_imputation.py  test_engine.py  test_final_imputation.py  test_forward_imputation.py  test_imputation.py  test_imputation_basics.py  test_mean_of_ratios.py  test_ratio_calculation.py  test_ratio_of_means.py  test_scenarios.py  test_temp_ci_test_remove_later.py
tests/imputation/fixture_data/: imputation_test_data_1.csv  imputation_test_data_10.csv  imputation_test_data_11.csv  imputation_test_data_12.csv  imputation_test_data_2.csv  imputation_test_data_3.csv  imputation_test_data_4.csv  imputation_test_data_5.csv  imputation_test_data_6.csv  (+23 more)
tests/outliering/: test_winsorisation.py
(+688 files in other folders)
