[tool.poetry]
name = "statistical_methods_library"
version = "12.0.0-rc13"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "3.1.1"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
pytest = "^7.2.1"
black = "^23.1"
flake8 = "^5.0.4"
coverage = "^7.0"
pytest-cov = "^4.0.0"
pytest-dependency = "^0.5.1"
pytest-tap = "^3.3"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
junit_suite_name = "statistical_methods_library"
addopts = [
    "--exitfirst",
    "--cov=statistical_methods_library",
    "--cov-fail-under=95",
    "--import-mode=importlib"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
