[tool.poetry]
name = "statistical_methods_library"
version = "13.3.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
pyspark = ">=3.1.1 <3.5.3"

[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
pytest = "^7.4.4"
black = "^23.1"
flake8 = "^5.0.4"
coverage = "^7.2"
pytest-cov = "^4.1.0"
pytest-dependency = "^0.6.0"
pytest-tap = "^3.3"
flake8-pyproject = "^1.2.3"

[tool.pytest.ini_options]
junit_suite_name = "statistical_methods_library"
addopts = [
    "--exitfirst",
    "--cov=statistical_methods_library",
    "--cov-fail-under=95",
    "--import-mode=importlib",
    "--tb=native"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 90 
exclude = ".venv"